A little more clarity

--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "eaa97fbe",
+   "id": "04fb2886",
    "metadata": {
     "scrolled": true
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7572fe4",
+   "id": "827f3230",
    "metadata": {},
    "source": [
     "### c: This appears to be a good model with a high degree of accuracy"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f0c572e",
+   "id": "d57ecec5",
    "metadata": {},
    "source": [
     "---"
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9ee86724",
+   "id": "a0287089",
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4b9c02bc",
+   "id": "489f6184",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b96514a",
+   "id": "11ccd956",
    "metadata": {},
    "source": [
     "### Which evaluation metric would be appropriate here? Which model would be the best fit for this use case?\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e5757628",
+   "id": "cc99fb5e",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "148253b8",
+   "id": "21278f37",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "9028618d",
+   "id": "2f6ab51f",
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914115ef",
+   "id": "db336ed0",
    "metadata": {},
    "source": [
     "### 1. In terms of accuracy, how do the various models compare to the baseline model? Are any of the models better than the baseline?\n",
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5cb0143e",
+   "id": "76eb0b7a",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "ea89243b",
+   "id": "595a7446",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "d83125fc",
+   "id": "81e7a64c",
    "metadata": {
     "scrolled": true
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b34746",
+   "id": "c674c0ed",
    "metadata": {},
    "source": [
     "#### - In terms of accuracy, models 2 and 3 are less accurate than the baseline, but 1 and 4 exceed it."
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7200120b",
+   "id": "2d5dbdaf",
    "metadata": {},
    "source": [
     "for number 4(gives you paws), part b and c, only be concerned with answering the question for \"Phase I\", not \"Phase II\"."
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc458a2f",
+   "id": "61ffaab8",
    "metadata": {},
    "source": [
     "### 2. Suppose you are working on a team that solely deals with dog pictures. Which of these models would you recommend for Phase I? For Phase II?"
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "414e0606",
+   "id": "229315f9",
    "metadata": {
     "scrolled": true
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6464b13b",
+   "id": "a220fa41",
    "metadata": {},
    "source": [
     "### 3. Suppose you are working on a team that solely deals with cat pictures. Which of these models would you recomend for Phase I? For Phase II?"
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "85811ff1",
+   "id": "eb42f75c",
    "metadata": {
     "scrolled": true
    },
@@ -742,14 +742,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb8cdb3",
+   "id": "8ecad2c2",
    "metadata": {},
    "source": [
     "#### Phase I: An automated algorithm tags pictures as either a cat or a dog . \n",
     "#### Phase 2: photos are put through another round of review, possibly with human oversight, before being presented to the users.\n",
     "\n",
-    "#### - For Phase 1, I would recommend model 1\n",
-    "#### - For Phase 2, I would recommend model 2"
+    "#### - For Phase 1, I would recommend model 2\n",
+    "##### I don't want to miss cats\n",
+    "#### - For Phase 2, I would recommend model 4"
    ]
   },
   {
@@ -776,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "d6b2efee",
+   "id": "c9433000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "a9295943",
+   "id": "2a4b2f05",
    "metadata": {
     "scrolled": true
    },
@@ -823,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "a3ffb805",
+   "id": "a813825c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a425d693",
+   "id": "cac09992",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55552f34",
+   "id": "e66cd294",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31cf4884",
+   "id": "5b92f36f",
    "metadata": {},
    "source": [
     "- balanced_accuracy_score : Compute the balanced accuracy to deal with\n",
@@ -866,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b1a408",
+   "id": "a594812d",
    "metadata": {},
    "source": [
     "|               | pred dog   | pred cat   |\n",
@@ -882,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee72c05c",
+   "id": "28cc1fd4",
    "metadata": {},
    "source": [
     "### 1. Accuracy: How many times the prediction (regardless of what it was ) was correct. <br>\n",
@@ -893,7 +894,7 @@
     "\n",
     "### TP / TP + FP\n",
     "\n",
-    "### 3. Recall. How the correct positive case predictions fair against reality\n",
+    "### 3. Recall. How the correct positive case predictions fair against reality. I dont want to miss True Positive correctness?\n",
     "\n",
     "### TP / TP + FN"
    ]
@@ -901,14 +902,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "475e2be3",
+   "id": "2b315bda",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "02613078",
+   "id": "ab03fb4a",
    "metadata": {},
    "source": [
     "## Other Metrics:\n",
@@ -924,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b81c19da",
+   "id": "76bb0ce3",
    "metadata": {},
    "outputs": [],
    "source": []
