Need to add more documentation

--- a/model.ipynb
+++ b/model.ipynb
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "621d4a30",
+   "id": "f186167f",
    "metadata": {},
    "outputs": [
     {
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13349c7d",
+   "id": "05c705e4",
    "metadata": {},
    "source": [
     "### Acquire the data"
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c479c115",
+   "id": "e962ee2a",
    "metadata": {},
    "source": [
     "### Prepare the data"
@@ -2009,7 +2009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7844cd1",
+   "id": "b11e3bfb",
    "metadata": {},
    "source": [
     "### Split the data"
@@ -2039,7 +2039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebfebde3",
+   "id": "b81527ea",
    "metadata": {},
    "source": [
     "### Look at the train data"
@@ -2048,7 +2048,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "a8055537",
+   "id": "09d5ff96",
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf1817b",
+   "id": "44912a5c",
    "metadata": {},
    "source": [
     "### Determine the baseline"
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15b2d148",
+   "id": "160badbb",
    "metadata": {},
    "source": [
     "### Create X, Y Train"
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81cf1791",
+   "id": "a64351dc",
    "metadata": {},
    "source": [
     "### Fit the models"
@@ -2238,7 +2238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4b74e45",
+   "id": "2a25b134",
    "metadata": {},
    "source": [
     "### Determine model score"
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e676095",
+   "id": "07ae6c63",
    "metadata": {},
    "source": [
     "### Create Confusion Matrix"
@@ -2307,7 +2307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e215336c",
+   "id": "73cca74d",
    "metadata": {},
    "source": [
     "### Classification Report"
@@ -3214,14 +3214,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38df07c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "409e128b",
    "metadata": {},
@@ -3640,12 +3632,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 224,
+   "id": "f2d1c100",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>isMale</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>alone</th>\n",
+       "      <th>baseline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>718</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.5000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>77.2875</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>737</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>512.3292</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>135.6333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pclass isMale   age  sibsp  parch      fare  embark_town  alone  baseline\n",
+       "304       3      1  28.0      0      0    8.0500          1.0      1         0\n",
+       "718       3      1  28.0      0      0   15.5000          3.0      1         0\n",
+       "102       1      1  21.0      0      1   77.2875          1.0      0         0\n",
+       "737       1      1  35.0      0      0  512.3292          2.0      1         0\n",
+       "269       1      0  35.0      0      0  135.6333          1.0      1         0"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_tr.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2510aeb",
+   "metadata": {},
+   "source": [
+    "**Create the KNN object**"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 213,
    "id": "21d9f70a",
    "metadata": {},
    "outputs": [],
    "source": [
     "knn20 = KNeighborsClassifier(n_neighbors=20, weights='uniform')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7533002",
+   "metadata": {},
+   "source": [
+    "**Fit the model**"
    ]
   },
   {
@@ -3964,12 +4093,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45d67bde",
+   "metadata": {},
+   "source": [
+    "NEED TO RUN SAME KNN ON VAL, NTO NEW ONE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "id": "108e9c8c",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=20)"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_val = KNeighborsClassifier(n_neighbors=20, weights='uniform')\n",
+    "knn_val.fit(x_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "eb6703fc",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_predict = knn_val.predict(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "9681985c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_proba = knn_val.predict_proba(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "59af9f33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNN classifier accuracy(validate): 0.71\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('KNN classifier accuracy(validate): {:.2f}'\n",
+    "     .format(knn_val.score(x_val, y_val)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3980,9 +4170,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dea2b924",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "461a504e",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba0a327c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "391d3fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc9a2ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dde886d9",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -4535,7 +4759,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "6926d6b5",
+   "id": "fb64f330",
    "metadata": {
     "scrolled": true
    },
@@ -4559,7 +4783,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "642aa307",
+   "id": "d7ddb4ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4573,7 +4797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf165da",
+   "id": "76f69c9a",
    "metadata": {},
    "source": [
     "##### Define Logistic Regression Model"
@@ -4582,7 +4806,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "117702fc",
+   "id": "f7d08eea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4591,7 +4815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e159fcd",
+   "id": "ba99336d",
    "metadata": {},
    "source": [
     "##### Fit the model to the train data"
@@ -4600,7 +4824,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "2b802791",
+   "id": "3328aed9",
    "metadata": {},
    "outputs": [
     {
@@ -4620,7 +4844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58020396",
+   "id": "d71b5114",
    "metadata": {},
    "source": [
     "##### Make predictions using the model"
@@ -4629,7 +4853,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "f5dacfdd",
+   "id": "3b197bda",
    "metadata": {},
    "outputs": [
     {
@@ -4651,7 +4875,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "99985341",
+   "id": "1b80a3f2",
    "metadata": {},
    "outputs": [
     {
@@ -4762,7 +4986,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "5ec2d09e",
+   "id": "9b71aa1b",
    "metadata": {},
    "outputs": [
     {
@@ -4849,7 +5073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8ecd4bf",
+   "id": "95043757",
    "metadata": {},
    "source": [
     "### With just pclass, age, fare"
@@ -4858,7 +5082,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "1488528b",
+   "id": "eb1b5980",
    "metadata": {},
    "outputs": [
     {
@@ -4962,7 +5186,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "2cda991b",
+   "id": "098ad940",
    "metadata": {
     "scrolled": true
    },
@@ -5045,7 +5269,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "d8a88327",
+   "id": "f1b627f4",
    "metadata": {},
    "outputs": [
     {
@@ -5067,7 +5291,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "89234f59",
+   "id": "c629ef8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5082,7 +5306,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "4112ca8e",
+   "id": "d046dd6e",
    "metadata": {},
    "outputs": [
     {
@@ -5103,7 +5327,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "643c9aeb",
+   "id": "a32cd6d1",
    "metadata": {},
    "outputs": [
     {
@@ -5125,7 +5349,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "2cc51ad9",
+   "id": "c04bb73d",
    "metadata": {
     "scrolled": true
    },
@@ -5238,7 +5462,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "ff31a20b",
+   "id": "e853ecd4",
    "metadata": {},
    "outputs": [
     {
@@ -5326,7 +5550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea5ff2fb",
+   "id": "4f592f60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5334,7 +5558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81babf94",
+   "id": "6fbbe236",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5342,7 +5566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d2d0e48",
+   "id": "53c072de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5358,7 +5582,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "fce3306b",
+   "id": "81b69575",
    "metadata": {},
    "outputs": [
     {
@@ -5568,7 +5792,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c08c3866",
+   "id": "8fb844d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5583,7 +5807,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "5cdc9c5a",
+   "id": "66ab0e34",
    "metadata": {},
    "outputs": [
     {
@@ -5604,7 +5828,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "58980b9f",
+   "id": "28eb3bd0",
    "metadata": {},
    "outputs": [
     {
@@ -5626,7 +5850,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a0cdf18a",
+   "id": "f08c333b",
    "metadata": {},
    "outputs": [
     {
@@ -5737,7 +5961,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "3d19d3d9",
+   "id": "0b686ac7",
    "metadata": {},
    "outputs": [
     {
@@ -5825,7 +6049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4672409e",
+   "id": "ca245aa4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5841,7 +6065,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "c6ef95ee",
+   "id": "e699708e",
    "metadata": {},
    "outputs": [
     {
@@ -6053,7 +6277,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "c64ed20a",
+   "id": "23f7ad10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6068,7 +6292,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "f2342335",
+   "id": "f2b674a0",
    "metadata": {},
    "outputs": [
     {
@@ -6089,7 +6313,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "49625851",
+   "id": "049331e4",
    "metadata": {},
    "outputs": [
     {
@@ -6111,7 +6335,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "8e231a71",
+   "id": "858eea01",
    "metadata": {},
    "outputs": [
     {
@@ -6222,7 +6446,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "68937716",
+   "id": "6834ab2e",
    "metadata": {},
    "outputs": [
     {
@@ -6485,7 +6709,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "580d7772",
+   "id": "91444bb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6495,7 +6719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4328839",
+   "id": "5a9acb95",
    "metadata": {},
    "outputs": [],
    "source": []
