--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -748,9 +748,9 @@
     "#### Phase I: An automated algorithm tags pictures as either a cat or a dog . \n",
     "#### Phase 2: photos are put through another round of review, possibly with human oversight, before being presented to the users.\n",
     "\n",
-    "#### - For Phase 1, I would recommend model 2\n",
+    "#### - For Phase 1, I would recommend model 2 recall\n",
     "##### I don't want to miss cats\n",
-    "#### - For Phase 2, I would recommend model 4"
+    "#### - For Phase 2, I would recommend model 4 precision"
    ]
   },
   {
